--- a/app/vviews/admin/helpers/action.ejs
+++ b/app/vviews/admin/helpers/action.ejs
@@ -17,13 +17,8 @@
 
         return `<div class="d-flex flex-wrap align-items-center justify-content-between mb-2">
                     <div class="mb-1">
-                        <select name="slbAction" class="slbAction custom-select custom-select-sm mr-1 " style="width: unset">
-                            
-                            ${xhtmlAction}
-                        </select> 
-                        <button id="btn-action" value="btnAction" disabled class="btnAction btn btn-sm btn-info">Apply <span class="badge badge-pill badge-danger navbar-badge" style="display: none"></span></button>
                     </div>
-                    <a href="${linkAddNew}" class="btn btn-sm btn-info"><i class="fas fa-plus"></i> Add New</a>
+                    <a href="${linkAddNew}" class="btn btn-sm btn-info"><i class="fas fa-plus"></i> Thêm Mới</a>
                 </div>`;
     } 
 %>
