--- a/app/vviews/admin/pages/products/form.ejs
+++ b/app/vviews/admin/pages/products/form.ejs
@@ -1,12 +1,13 @@
 <% include ./../../helpers/image %>
 <% include ./../../helpers/selectCategory %>
+<% include ./../../helpers/showoptionbox %>
 <% include ./../../helpers/image %>
 <% 
 	const collection="products" ; 
 	const linkPrefix=systemConfig.prefixAdmin + `/${collection}/`; 
 	errors=errors ?? {};
 	const folderUpload=`uploads/${collection}/`; 
-	let information = item.information ? JSON.parse(item.information) : null;
+	// let information = item.information ? JSON.parse(item.information) : null;
 %>
 <style>
 	#myDropzone {
@@ -32,12 +33,12 @@
 				<div class="col-md-6">
 					<div class="card card-primary">
 						<div class="card-header">
-							<h3 class="card-title">Details</h3>
+							<h3 class="card-title">Nhập Thông Tin</h3>
 						</div>
 						<div class="card-body">
 
 							<div class="form-group">
-								<label for="name">Name</label>
+								<label for="name">Tên</label>
 								<input type="text" name="name" value="<%= item.name %>" class="form-control form-control-sm <%= errors.name && 'is-invalid' %>" onKeyUp="handleSlug(
 								'<%= linkPrefix %>',
 								this,
@@ -55,17 +56,17 @@
 								<%- `<span class="error invalid-feedback">${errors.price}</span>` %>
 							</div>
 							<div class="form-group">
-								<label>Category</label>
+								<label>Danh Mục</label>
 										<%- selectCategory(listCategory,item.categoriesId,'',errors.categoriesId) %>
 									</select>
 							</div>
 							<div class="form-group">
-								<label>Ordering</label>
+								<label>Thứ Tự</label>
 								<input type="text" name="ordering" value="<%= item.ordering ?? 0 %>" class="form-control form-control-sm <%= errors.ordering && 'is-invalid' %>">
 								<%- `<span class="error invalid-feedback">${errors.ordering}</span>` %>
 							</div>
 							<div class="form-group">
-								<label>Status</label>
+								<label>Trạng Thái</label>
 								<select id="form[status]" name="status" class="custom-select custom-select-sm <%= errors.status && 'is-invalid' %>">
 									<option value="novalue">Choose Status</option>
 									<option value="active" <%= (item.status == "active") ? 'selected="selected"' : '' %> >Active</option>
@@ -73,8 +74,26 @@
 								</select>
 								<%- `<span class="error invalid-feedback">${errors.status}</span>` %>
 							</div>
+							<div class="form-group row">
+								<label>Hiển Thị</label>
+								<div class="col-xs-12 col-sm-8">
+                                    <div class="custom-control custom-checkbox">
+                                        <input class="custom-control-input" type="checkbox" name="bestseller" id="bestseller" value="true" <%= (item.bestseller == true) ? 'checked' : '' %> >
+                                        <label for="bestseller" class="custom-control-label">Hiện Bán Chạy</label>
+                                        </div>
+                                    <div class="custom-control custom-checkbox">
+                                        <input class="custom-control-input" type="checkbox" name="newarrivals" id="newarrivals" value="true" <%= (item.newarrivals == true) ? 'checked' : '' %> >
+                                        <label for="newarrivals" class="custom-control-label">Hiện Hàng Mới Về</label>
+                                    </div>
+                                </div>
+                            </div>
 							<div class="form-group">
-								<label>Description</label>
+								<label for="shortDes">Mô Tả Ngắn</label>
+								<input type="text" name="shortDes" value="<%= item.shortDes %>" class="form-control form-control-sm <%= errors.shortDes && 'is-invalid' %>">
+								<%- `<span class="error invalid-feedback">${errors.slug}</span>` %>
+							</div>
+							<div class="form-group">
+								<label>Mô Tả Chi Tiết</label>
 								<textarea id="editor" name="description"><%= item.description %></textarea>
 							</div>	
 						</div>
@@ -83,7 +102,7 @@
 				<div class="col-md-6">
 					<div class="card card-primary">
 						<div class="card-header">
-							<h3 class="card-title">Atributes</h3>
+							<h3 class="card-title">Thuộc Tính</h3>
 						</div>
 						<div class="card-body">
 							<div class="row">
@@ -100,7 +119,7 @@
 					</div>
 					<div class="card card-primary">
 						<div class="card-header">
-							<h3 class="card-title">Images</h3>
+							<h3 class="card-title">Hình Ảnh</h3>
 						</div>
 						<div class="card-body">
 							<div class="row">
@@ -116,7 +135,7 @@
 				
 							<div class="card card-success">
 								<div class="card-header">
-									<h3 class="card-title">Sortable</h3>
+									<h3 class="card-title">Sắp Xếp</h3>
 									<div class="card-tools">
 										<button type="button" class="btn btn-tool" data-card-widget="collapse"><i class="fas fa-minus"></i>
 									</button>
@@ -129,7 +148,7 @@
 
 							<div class="card card-danger">
 								<div class="card-header">
-									<h3 class="card-title">Delete</h3>
+									<h3 class="card-title">Kéo Ảnh Vào Ô Bên Dưới Để Xóa Ảnh</h3>
 									<div class="card-tools">
 										<button type="button" class="btn btn-tool" data-card-widget="collapse"><i class="fas fa-minus"></i>
 									</button>
@@ -151,9 +170,9 @@
 					<input name="image_old" value="<%= item.thumbnail %>" type="hidden" />
 					<input name="image_uploaded" value="" type="hidden" id="image_uploaded" />
 					<input name="images" value="<%= item.images %>" type="hidden" />
-					<button type="button" name="saveImages" class="btn btn-sm btn-success mr-1" disabled> Save Images</button>
-					<button type="submit" class="btn btn-sm btn-success mr-1" disabled> Submit</button>
-					<a href="<%= linkPrefix %>" class="btn btn-sm btn-danger mr-1"> Cancel</a>
+					<button type="button" name="saveImages" class="btn btn-sm btn-success mr-1" disabled> Lưu Ảnh</button>
+					<button type="submit" class="btn btn-sm btn-success mr-1" disabled> Lưu</button>
+					<a href="<%= linkPrefix %>" class="btn btn-sm btn-danger mr-1"> Quay Về</a>
 				</div>
 			</div>
 	</form>
@@ -168,17 +187,17 @@
 			console.error(error);
 		});
 
-	// imgInp.onchange = evt => {
-	// 	const [file] = imgInp.files
-	// 	if (file) {
-	// 		showImage.src = URL.createObjectURL(file)
-	// 		image_uploaded.setAttribute('value', 'uploaded')
-	// 	}
-	// }
+	imgInp.onchange = evt => {
+		const [file] = imgInp.files
+		if (file) {
+			showImage.src = URL.createObjectURL(file)
+			image_uploaded.setAttribute('value', 'uploaded')
+		}
+	}
 
-	// function notImage(e, folder) {
-	// 	e.setAttribute('src', folder + 'no-avatar.png')
-	// }
+	function notImage(e, folder) {
+		e.setAttribute('src', folder + 'no-avatar.png')
+	}
 </script>
 
 <script>
@@ -233,7 +252,7 @@
 		paramName: 'fileMulti',
 		autoProcessQueue:false,
 		addRemoveLinks: true,
-  	maxFiles:10,
+		maxFiles:10,
 		parallelUploads:10,
 		init: function() {
 			var myDropzone = this;
