--- a/app/vviews/ecommerce/elements/footer.ejs
+++ b/app/vviews/ecommerce/elements/footer.ejs
@@ -224,10 +224,9 @@ const folderProductUpload 	= "uploads/products/";
 
     
     <!-- Newsletter Popup -->
-	<div class="newsletter-wrap" id="popup-container">
+	<!-- <div class="newsletter-wrap" id="popup-container">
       <div id="popup-window">
         <a class="btn closepopup"><i class="icon icon anm anm-times-l"></i></a>
-        <!-- Modal content-->
         <div class="display-table splash-bg">
           <div class="display-table-cell width40"><img src="/frontend/assets/images/newsletter-img.jpg" alt="Join Our Mailing List" title="Join Our Mailing List" /> </div>
           <div class="display-table-cell width60 text-center">
@@ -253,5 +252,5 @@ const folderProductUpload 	= "uploads/products/";
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 	<!-- End Newsletter Popup -->
