--- a/app/vviews/ecommerce/elements/header.ejs
+++ b/app/vviews/ecommerce/elements/header.ejs
@@ -93,7 +93,7 @@
             <li class="lvl1 parent dropdown"><a href="#">Danh Mục<i class="anm anm-angle-down-l"></i></a>
               <ul class="dropdown">
                 <% listCategory.forEach((category)=> { %>
-                  <li><a href="category/<%= category.slug %> " class="site-nav"><%= category.name %></a></li>
+                  <li><a href="/category/<%= category.id %> " class="site-nav"><%= category.name %></a></li>
                 <%})%>
               </ul>
             </li>
