--- a/app/vviews/ecommerce/elements/header.ejs
+++ b/app/vviews/ecommerce/elements/header.ejs
@@ -10,9 +10,9 @@
 <!--Search Form Drawer-->
 <div class="search">
   <div class="search__form">
-    <form class="search-bar__form" action="#">
+    <form class="search-bar__form" action="/search">
       <button class="go-btn search__button" type="submit"><i class="icon anm anm-search-l"></i></button>
-      <input class="search__input" type="search" name="q" value="" placeholder="Tìm Kiếm"
+      <input class="search__input" type="search" name="keyword" value="" placeholder="Tìm Kiếm"
         aria-label="Search" autocomplete="off">
     </form>
     <button type="button" class="search-trigger close-btn"><i class="anm anm-times-l"></i></button>
