--- a/app/vviews/ecommerce/pages/search/index.ejs
+++ b/app/vviews/ecommerce/pages/search/index.ejs
@@ -30,7 +30,7 @@
                                     </ul>
                                 </li> -->
                                 <% listCategory.slice(0,6).forEach((category)=> { %>
-                                    <li class="lvl-1"><a href="/category/<%= category.id %>" class="site-nav"><%= category.name %></a></li>
+                                    <li class="lvl-1"><a href="category/<%= category.id %>" class="site-nav"><%= category.name %></a></li>
                                 <%})%>
                                 <!-- <li class="lvl-1"><a href="#;" class="site-nav">Shoes</a></li> -->
 
@@ -134,7 +134,7 @@
                         <div class="widget-content">
                             <div class="list list-sidebar-products">
                               <div class="grid">
-                                <% listProductNewArrivals.forEach((items)=> { %>
+                                <% listProducts.forEach((items)=> { %>
                                     <div class="grid__item">
                                         <div class="mini-list-item">
                                           <div class="mini-view_image">
