--- a/app/vviews/admin/helpers/image.ejs
+++ b/app/vviews/admin/helpers/image.ejs
@@ -3,7 +3,11 @@
 
         if(imageName == null){ 
             imageName = 'no-avatar.png';
+        }else{
+            let arr=imageName.split(",")
+            imageName=arr[0]
         }
+
         return `<img class="img-thumbnail" src="${folder + imageName}" alt="${alt}" width=${width} style="object-fit: cover;height:${height}px;" id="${id}" onerror="notImage(this,'${folder}')" />`;
     }
     imageMulti = (images,folderUpload) => {
