--- a/app/vviews/admin/html/sidebar.ejs
+++ b/app/vviews/admin/html/sidebar.ejs
@@ -10,6 +10,7 @@
         // {name: 'Rss', icon: 'fas fa-rss', link: `${systemConfig.prefixAdmin}/rss`},
         {name: 'Cài Đặt', icon: 'fas fa-cog', link: `${systemConfig.prefixAdmin}/settings`},
         {name: 'Tài Khoản', icon: 'fa-user', link: `${systemConfig.prefixAdmin}/users`},
+        {name: 'Tin Nhắn Khách Hàng', icon: 'fas fa-window-restore', link: `${systemConfig.prefixAdmin}/contact`},
     ];
 
     let xhtmlMenu = '';
