--- a/app/vviews/ecommerce/pages/contact/index.ejs
+++ b/app/vviews/ecommerce/pages/contact/index.ejs
@@ -32,7 +32,7 @@
                 	<h2>Liên Hệ Với Chúng Tôi Bên Dưới</h2>
                     <!-- <p>Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão. O Lorem Ipsum tem vindo a ser o texto padrão usado por estas indústrias desde o ano de 1500 </p> -->
                 	<div class="formFeilds contact-form form-vertical">
-                      <form action="" method="post"  id="contact_form" class="contact-form">	
+                      <form action="" method="post"  id="sendMail" class="contact-form">	
                       <div class="row">
                         <div class="col-12 col-sm-12 col-md-6 col-lg-6">
                         	<div class="form-group">
