--- a/app/vviews/ecommerce/pages/listProduct/index.ejs
+++ b/app/vviews/ecommerce/pages/listProduct/index.ejs
@@ -1,5 +1,10 @@
 <% const collection="products" ; const folderUpload=`uploads/${collection}/`; %>
-<% include ../../../admin/helpers/userTimeInfo %>
+<% include ../../helpers/showProduct %>
+<% include ../../helpers/showProductSidebar %>
+
+
+
+
 <div id="page-content">
     <br>
     <div class="container">
@@ -261,11 +266,8 @@
                                         <!-- start product image -->
                                         <a href="/product/<%= items.id %>">
                                             <!-- image -->
-                                            <img class="primary blur-up lazyload" data-src="/frontend/assets/images/product-images/product-image22.jpg" src="/frontend/assets/images/product-images/product-image22.jpg" alt="image" title="product" />
-                                            <!-- End image -->
-                                            <!-- Hover image -->
-                                            <img class="hover blur-up lazyload" data-src="/frontend/assets/images/product-images/product-image22-1.jpg" src="/frontend/assets/images/product-images/product-image22-1.jpg" alt="image" title="product" />
-                                            <!-- End hover image -->
+                                            <%- imageMulti(items.images, folderUpload) %>  
+
                                         </a>
                                         <!-- end product image -->
     
